# chatbot

frontend/my-app/: package-lock.json  package.json
frontend/my-app/src/: App.css  App.js
frontend/my-app/src/components/: AuthPage.jsx  Icons.jsx  InputBar.jsx  MessageBubble.jsx  Sidebar.jsx  TopHeader.jsx  TypingIndicator.jsx
my_project/: database.py  main.py  pyproject.toml  schemas.py
my_project/.github/: copilot-instructions.md
my_project/databaseQuery/: chat.py
my_project/models/: chat.py  user.py
