[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.0",
    "langchain>=1.2.15",
    "langchain-aws>=1.4.4",
    "langchain-classic>=1.0.4",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langchain-google-genai>=4.2.2",
    "uvicorn>=0.44.0",
]
